# Top_Engineers

./: README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/processed/: scores_20260227T022051.json  scores_20260227T035506.json
posthog_impact/: __init__.py  __main__.py  config.py  fetcher.py  github_client.py  models.py  scoring.py
posthog_impact.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: fetch.py  score.py
tests/: test_smoke.py
