[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "posthog_impact"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "pandas>=2.1",
    "httpx>=0.27",
    "python-dateutil>=2.8",
]

[tool.setuptools.packages.find]
include = ["posthog_impact*"]
